--- a/SolverTests/en.lproj/InfoPlist.strings
+++ b/SolverTests/en.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* (No Commment) */
-"CFBundleName" = "$(PRODUCT_NAME)";
+"CFBundleName" = "EquationSolver";
 
 /* (No Commment) */
 "CFBundleShortVersionString" = "1.0";
